Adição de interpolação de mensagens

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,4 +9,4 @@ PeopleRequest.email.notNullOrEmpty=O campo 'email' não deve ser nulo ou estar v
 PeopleRequest.email.invalid=O 'email' informado é inválido
 PeopleRequest.cpf.notNullOrEmpty=O campo 'identificationNumber' não deve ser nulo ou estar vazio
 PeopleRequest.cpf.invalid=O 'CPF' informado é inválido
-PeopleRequest.visibility.invalid=O campo 'type' possui valor inválido
+PeopleRequest.type.invalid=O campo 'type' possui valor inválido
